@@ -862,6 +862,7 @@ t/templater/00load.t
 t/templater/10token.t
 t/templater/20parse.t
 t/templater/30expr.t
+t/templates/called.tmpl
 t/templates/included.include	Used by t010template.t
 t/templates/included.recursive
 t/templates/wrapinner.tmpl
